--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -45,6 +45,8 @@ security:
         - { path: ^/api/contacto/enviar, roles: PUBLIC_ACCESS }
         - { path: ^/api/users/register, roles: PUBLIC_ACCESS }
         - { path: ^/api/users/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/users/recover-password, roles: PUBLIC_ACCESS }
+        - { path: ^/api/users/reset-password, roles: PUBLIC_ACCESS }
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/registro, roles: PUBLIC_ACCESS }
         - { path: ^/api/productos, roles: PUBLIC_ACCESS, methods: [GET] }
